Set `.select-kit-body` width to auto

--- a/scss/common/_form-select2.scss
+++ b/scss/common/_form-select2.scss
@@ -94,6 +94,7 @@
 
     .select-kit-body {
       box-shadow: $dropdown-box-shadow;
+      width: auto;
     }
 
     .select-kit-collection .collection-header .tag-filter {
