--- a/scss/extensions/_table.scss
+++ b/scss/extensions/_table.scss
@@ -17,6 +17,14 @@
   height: $tbody-cell-height;
   padding: $tbody-cell-padding-y $tbody-cell-padding-x;
   vertical-align: middle;
+
+  &:first-of-type {
+    padding-left: ($tbody-cell-padding-x * 2);
+  }
+
+  &:last-of-type {
+    padding-right: ($tbody-cell-padding-x * 2);
+  }
 }
 
 %thead-cell {
@@ -25,4 +33,12 @@
   height: $thead-cell-height;
   padding: $thead-cell-padding-y $thead-cell-padding-x;
   vertical-align: middle;
+
+  &:first-of-type {
+    padding-left: ($thead-cell-padding-x * 2);
+  }
+
+  &:last-of-type {
+    padding-right: ($thead-cell-padding-x * 2);
+  }
 }
